Fix ibox overflow

--- a/webapp/src/main/webapp/iaf/gui/css/style.css
+++ b/webapp/src/main/webapp/iaf/gui/css/style.css
@@ -3817,7 +3817,7 @@ code {
   border-style: solid solid none;
   border-width: 1px 0;
   clear: both;
-  overflow: overlay;
+  overflow: auto;
 }
 .ibox-footer {
   color: inherit;
